# c_net_client_gui

./: CMakeLists.txt
include/: c_net_client_guiConfig.h.in
src/: glade1.c  glade1.glade  main.cpp
